Mark areas to be completed (COMPLETE); add text - Add clarifying text in what is being done (that the learner   doesn't have to do themselves.

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Deterministic training\n",
     "torch.use_deterministic_algorithms(True)\n",
@@ -44,64 +36,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intro"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Load Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Reduced data to make it manageable for smaller systems\n",
-    "DATA_FILE: str = '../data/shakespeare_small.txt'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "DATA_FILE: str = '../data/shakespeare_small.txt'\n",
+    "\n",
     "with open(DATA_FILE, 'r') as data_file:\n",
-    "    raw_text = data_file.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of characters: 50,085\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'Number of characters: {len(raw_text):,}')"
+    "    raw_text = data_file.read()\n",
+    "\n",
+    "print(f'Number of characters in text file: {len(raw_text):,}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Character-Based Text Generation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Character-Based Text Generation\n",
+    "\n",
     "The first model we'll try for text generation will be by training the model and\n",
     "generating by character.\n",
     "\n",
@@ -134,25 +92,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def normalize_text(text: str) -> str:\n",
-    "    # Can be multiple actions to normalize text\n",
+    "    # COMPLETE: Normalize incoming text; can be multiple actions\n",
+    "    # Just lowercase letters \n",
     "    normalized_text = text.lower()\n",
+    "    # Keeping punctuation & other characters\n",
     "    return normalized_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TEST: Is your text normalized the way you expected?\n",
-    "# normalized_text = normalize_text(raw_text)\n",
-    "# print(normalized_text)"
+    "# Only the first 500 characters of the original text\n",
+    "normalized_text = normalize_text(raw_text[:500])\n",
+    "print(normalized_text)"
    ]
   },
   {
@@ -164,25 +125,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pretokenize_text(text: str) -> str | list[str]:\n",
-    "    # Effectively the same as a string\n",
+    "    # COMPLETE: Pretokenize normalized text into character strings\n",
     "    smaller_pieces = [char for char in text]\n",
     "    return smaller_pieces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TEST: Is your (normalized) text pretokenized the way you expected?\n",
-    "# pretokenized_text = pretokenize_text(normalized_text)\n",
-    "# print(pretokenized_text)"
+    "# Only the first 500 characters of the original text\n",
+    "pretokenized_text = pretokenize_text(normalized_text)\n",
+    "print(pretokenized_text)"
    ]
   },
   {
@@ -194,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,11 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_text = tokenize_text(raw_text)"
+    "# TEST: Is your tokenized text the way you expected?\n",
+    "tokenized_text = tokenize_text(raw_text[:500])\n",
+    "print(tokenized_text)"
    ]
   },
   {
@@ -222,23 +186,30 @@
    "source": [
     "### Postprocessing\n",
     "\n",
-    "> Skip"
+    "We'll skip postprocessing since we don't have any special tokens we want to\n",
+    "consider for our task here."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Encode (Tokens → Integer IDs)"
+    "### Encode (Tokens → Integer IDs)\n",
+    "\n",
+    "We have `encode_text()` from our helper module that can encode our text based on\n",
+    "our tokenization process from our created `tokenize_text()` function.\n",
+    "\n",
+    "This will also provide us with `character_mapping`, an object that we can use to\n",
+    "map our tokens back and forth from strings to integer IDs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoded, character_mapping = encode_text(raw_text, tokenize_text)"
+    "encoded_text, character_mapping = encode_text(raw_text, tokenize_text)"
    ]
   },
   {
@@ -250,24 +221,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_tokens = character_mapping.n_tokens\n",
-    "dataset_size = len(encoded)"
+    "dataset_size = len(encoded_text)\n",
+    "print(f'Size of dataset: {dataset_size:,} characters')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "length = 32 # Number of characters\n",
-    "batch_size = 32\n",
+    "# Defining sequence length that will be taken in at a time by our model\n",
+    "sequence_length = 32 # Number of characters\n",
+    "batch_size = 32 # Number \n",
     "\n",
-    "train_dataset = ShakespeareDataset(encoded, length)\n",
+    "train_dataset = ShakespeareDataset(encoded_text, sequence_length)\n",
     "train_loader = DataLoader(\n",
     "    train_dataset,\n",
     "    shuffle=False, # Ensure determinsitic training\n",
@@ -279,15 +252,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Model"
+    "## Define Model\n",
+    "\n",
+    "We'll provide a defined model today, but this could be a step that you would\n",
+    "modify and experiment in other NLP projects you'll do."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Defining the model to be trained and generate text with\n",
     "model = build_model(n_tokens)\n",
     "model.to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
@@ -298,12 +275,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Text Genaration"
+    "## Define Text Genaration\n",
+    "\n",
+    "The `generate_text_by_char()` function will use your tokenizer and NLP model to\n",
+    "generate new text token-by-token (character-by-character in this case) by taking\n",
+    "in the input text and token sampling parameters.\n",
+    "\n",
+    "We can use temperature and top-k sampling to adjust the \"creativeness\" of the\n",
+    "generated text.\n",
+    "\n",
+    "We also pass in the `num_chars` parameter to tell the function how many tokens\n",
+    "(characters in this case) to generate."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,18 +302,22 @@
     "    temperature: float = 1.0,\n",
     "    topk: int | None = None,\n",
     ") -> str:\n",
+    "    # Uses your character-based tokenizer\n",
     "    tokenized_text: list[str] = tokenize_text(input_str)\n",
+    "    # Generates token-by-token and creates a list of those tokens\n",
     "    generated_tokens = []\n",
     "    for _ in range(num_chars):\n",
+    "        # Uses the input text and generated text (so far) to get next token\n",
     "        new_char = next_token(\n",
     "            tokenized_text=(tokenized_text + generated_tokens),\n",
     "            model=model,\n",
     "            token_mapping=token_mapping,\n",
+    "            # Temperature & top-k sampling are used in determing the next token\n",
     "            temperature=temperature,\n",
     "            topk=topk,\n",
     "        )\n",
     "        generated_tokens.append(new_char)\n",
-    "    # Input string and generated string\n",
+    "    # Returns input string plus the full generated string (of generated tokens)\n",
     "    full_text = ''.join(tokenized_text + generated_tokens)\n",
     "    return full_text"
    ]
@@ -335,55 +326,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train Model"
+    "## Train Model\n",
+    "\n",
+    "At this point, the model has not been trained so the code below will train the\n",
+    "NLP model that will be used to generate new text.\n",
+    "\n",
+    "The model will take in the text data (broken by tokens by our character-based\n",
+    "tokenizer) and attempt to predict the next token. Over time, the model should\n",
+    "hopefully get better in predicting the next token (given the previous text).\n",
+    "\n",
+    "To help us visualize how the model is training, at the end of every epoch, we\n",
+    "generate text using the `TEST_PHRASE` with the improving model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5, Loss: 2.5301672265171624\n",
-      "[00m 6.1s (0 0%) 2.1864]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to beelld bem\n",
-      "ton thacd an,\n",
-      "\n",
-      "ickedr faratwuy ofne sutwot theceres'd to tholly id hore pefoma:\n",
-      "arrim? sobo\n",
-      "Epoch 2/5, Loss: 2.1812584218125757\n",
-      "[00m 12.5s (1 20%) 1.9870]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to bent fre'n weirtinin:\n",
-      "and the whathy and the wowper, not to fortry ond rotse hon: the harey, the hice \n",
-      "Epoch 3/5, Loss: 2.078537799755986\n",
-      "[00m 18.5s (2 40%) 1.8850]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to be tas onen to prainn ther doww\n",
-      "sirs move cocan upfle. her and not of\n",
-      "coim noflenos thy thate hamsty, \n",
-      "Epoch 4/5, Loss: 2.019213533934694\n",
-      "[00m 24.8s (3 60%) 1.8197]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to beed ine him will pando soups thelanus:\n",
-      "the bat hons ylomy on and keas ame mant;\n",
-      "howtileas fate is lot\n",
-      "Epoch 5/5, Loss: 1.976692003640123\n",
-      "[00m 30.9s (4 80%) 1.7796]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to bem ase pory for thrame, ang thebbet's:\n",
-      "wollor:\n",
-      "your\n",
-      "the comprake thaist, mary bt hader o sore him on \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "PHRASE = 'To be or not to be'\n",
+    "TEST_PHRASE = 'To be or not to be'\n",
     "epochs = 5\n",
     "\n",
     "start = start_time()\n",
@@ -403,7 +365,7 @@
     "    print('[%s (%d %d%%) %.4f]' % (time_since(start), epoch, epoch / epochs * 100, loss))\n",
     "    print('-'*72)\n",
     "    gen_output = generate_text_by_char(\n",
-    "        input_str=PHRASE,\n",
+    "        input_str=TEST_PHRASE,\n",
     "        model=model,\n",
     "        num_chars=100,\n",
     "    )\n",
@@ -414,34 +376,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate Text"
+    "## Generate Text\n",
+    "\n",
+    "Now that the model has been trained, go ahead and observe how it performs!\n",
+    "\n",
+    "Try adjusting the different sampling methods using the `temperature` and `topk`\n",
+    "parameters on the same input string to see the differences.\n",
+    "\n",
+    "You might also try different phrases as well as how many tokens (`num_chars`) to\n",
+    "generate and observe how it does."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "to be or not to be ot highers\n",
-      "wither witr shumt.\n",
-      "\n",
-      "comat hame\n",
-      "thears, theicans, will and adfeve toutus\n",
-      "\n",
-      "and fors sprove\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "output = generate_text_by_char(\n",
     "    input_str='To be or not to be',\n",
     "    model=model,\n",
     "    num_chars=100,\n",
     "    temperature=1.0,\n",
+    "    topk=None,\n",
     ")\n",
     "print(output)"
    ]
@@ -487,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,36 +628,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5, Loss: 6.5734895998544065\n",
-      "[00m 2.7s (0 0%) 6.1417]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to be himfect small made till have lose to wars f forforw :, ; risen, breath co our for what : now honoursher sights got mother\n",
-      "Epoch 2/5, Loss: 5.882414554447443\n",
-      "[00m 5.6s (1 20%) 5.7952]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to be in of on trophy ; : gods :, mine press lay how -s to,ty theutus and him looks ; to seen word des this er\n",
-      "Epoch 3/5, Loss: 5.608338239999293\n",
-      "[00m 8.3s (2 40%) 5.5824]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to be disadvantage issue often, as him swear br has that they :. bonnet abundance sound arms v blast in though weguide as andure the state s\n",
-      "Epoch 4/5, Loss: 5.384834153228723\n",
-      "[00m 11.1s (3 60%) 5.3928]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to be the capitol baby for cry kn mile fame gates, that, wave again. marc think would beatus?inius : theane, report g his\n",
-      "Epoch 5/5, Loss: 5.200708334753403\n",
-      "[00m 14.0s (4 80%) 5.2110]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to be deie country hear : of whatledinglu itself it to make theuti issued th d. sicinius : but orius, love,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "epochs = 5\n",
     "\n",
@@ -740,17 +670,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "to be or not to be.'s yournia in he, you have, and a people, that and the capitol of the people is the people'd : he the\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "output = generate_text_by_token(\n",
     "        input_str='To be or not to be',\n",
