Make helper imports more obvious

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -14,7 +14,20 @@
     "from torch.utils.data import DataLoader\n",
     "from transformers import AutoTokenizer\n",
     "\n",
-    "from helper import *"
+    "from helper import (\n",
+    "    start_time,\n",
+    "    time_since,\n",
+    "    ShakespeareDataset,\n",
+    "    TokenMapping,\n",
+    "    build_model,\n",
+    "    next_token,\n",
+    "    # Characeter-based helpers\n",
+    "    encode_text,\n",
+    "    # Token-based helpers\n",
+    "    encode_text_from_tokenizer,\n",
+    "    tokenize_text_from_tokenizer,\n",
+    "    tokens_to_id_tensor,\n",
+    ")"
    ]
   },
   {
