Explicitly use "subword" instead of "token"

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -23,7 +23,7 @@
     "    next_token,\n",
     "    # Characeter-based helpers\n",
     "    encode_text,\n",
-    "    # Token-based helpers\n",
+    "    # Subword-based helpers\n",
     "    encode_text_from_tokenizer,\n",
     "    tokenize_text_from_tokenizer,\n",
     "    tokens_to_id_tensor,\n",
@@ -97,10 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalization\n",
-    "\n",
-    "> - Skip?\n",
-    "> - lowercase?"
+    "### Normalization"
    ]
   },
   {
@@ -420,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Token-Based Text Generation"
+    "# Subword Text Generation"
    ]
   },
   {
@@ -556,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_text_by_token(\n",
+    "def generate_text_by_subword(\n",
     "    input_str: str,\n",
     "    model,\n",
     "    token_mapping: TokenMapping = token_mapping,\n",
@@ -663,7 +660,7 @@
     "    print(f'Epoch {epoch + 1}/{epochs}, Loss: {total_loss / len(train_loader)}')\n",
     "    print('[%s (%d %d%%) %.4f]' % (time_since(start), epoch, epoch / epochs * 100, loss))\n",
     "    print('-'*72)\n",
-    "    output = generate_text_by_token(\n",
+    "    output = generate_text_by_subword(\n",
     "        input_str='To be or not to be',\n",
     "        model=model,\n",
     "        token_mapping=token_mapping,\n",
@@ -687,7 +684,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = generate_text_by_token(\n",
+    "output = generate_text_by_subword(\n",
     "        input_str='To be or not to be',\n",
     "        model=model,\n",
     "        token_mapping=token_mapping,\n",
