Add subword section text & comments

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -26,7 +26,6 @@
     "    # Subword-based helpers\n",
     "    encode_text_from_tokenizer,\n",
     "    tokenize_text_from_tokenizer,\n",
-    "    tokens_to_id_tensor,\n",
     ")"
    ]
   },
@@ -73,11 +72,11 @@
    "source": [
     "# Character-Based Text Generation\n",
     "\n",
-    "The first model we'll try for text generation will be by training the model and\n",
-    "generating by character.\n",
+    "The first model you'll build for text generation will use character-based\n",
+    "tokens.\n",
     "\n",
-    "This will mean each token will be a single character from the text and the model\n",
-    "will learn to predict the next character (a token).\n",
+    "Each token will be a single character from the text and the model will learn\n",
+    "to predict the next character (a token).\n",
     "\n",
     "To generate text the text, the model will take in a new string,\n",
     "character-by-character, and then generate a new likely character based on the\n",
@@ -285,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Text Genaration\n",
+    "## Define Text Generation\n",
     "\n",
     "The `generate_text_by_char()` function will use your tokenizer and NLP model to\n",
     "generate new text token-by-token (character-by-character in this case) by taking\n",
@@ -372,7 +371,7 @@
     "        total_loss += loss.item()\n",
     "    \n",
     "    print(f'Epoch {epoch + 1}/{epochs}, Loss: {total_loss / len(train_loader)}')\n",
-    "    print('[%s (%d %d%%) %.4f]' % (time_since(start), epoch, epoch / epochs * 100, loss))\n",
+    "    print(f'[{time_since(start)} ({epoch} {epoch / epochs * 100}) {loss:.4f}]')\n",
     "    print('-'*72)\n",
     "    gen_output = generate_text_by_char(\n",
     "        input_str=TEST_PHRASE,\n",
@@ -417,25 +416,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Subword Text Generation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The next model we'll try is use subword as tokens instead of characters to train\n",
-    "a model and ultimately generate text token by token.\n",
+    "# Subword Text Generation\n",
     "\n",
-    "Although this could be done by creating/training our own tokenizer, we'll use\n",
-    "Hugging Face to use a pretrained tokenizer to tokenizer our data.\n",
+    "The next model you'll build will use subword-tokenization instead of \n",
+    "characters-based token to train a model and ultimately generate new text\n",
+    "token-by-token.\n",
     "\n",
-    "After training the model with the subword tokens, we can generate text by\n",
-    "again providing a text input but this time using the tokenizer to create subword\n",
-    "tokens. The model will then take this sequence of subwords to generate a new\n",
-    "token (subword), add this token as part of the sequence, produce a new token,\n",
-    "and so on until a set number of tokens have been generated. We can then take\n",
-    "this list of subword tokens and decode back to a string of text!"
+    "Although this could be done by creating your own tokenizer, you'll use\n",
+    "Hugging Face to use a pretrained tokenizer to tokenizer the data.\n",
+    "\n",
+    "After training the model with subword tokens, \n",
+    "the model will take in a new string, token-by-token, and then generate a new\n",
+    "token (subword).\n",
+    "The model will continue producing new subword tokens based on the input text\n",
+    "and already produced tokens until a set number of tokens have been generated."
    ]
   },
   {
@@ -449,7 +443,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tokenize (Choose)"
+    "### Choosing a Tokenizer\n",
+    "\n",
+    "> NOTE:\n",
+    "> \n",
+    "> You can load another model outside of these choices but the model\n",
+    "> will have to be downloaded and may or may not be effective.\n",
+    ">\n",
+    "> If you'd like to explore more, here's a link to you might want to start with\n",
+    "> of different available pretrained models on Hugging Face:\n",
+    "> https://huggingface.co/models?pipeline_tag=text-generation"
    ]
   },
   {
@@ -458,13 +461,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Choose a pretrained tokenizer to use\n",
-    "xlmr_model_name = 'xlm-roberta-base'\n",
-    "bert_model_name = 'bert-base-cased'\n",
-    "bert_model_name_uncased = 'bert-base-uncased'\n",
+    "\n",
+    "# COMPLETE: Choose a pretrained tokenizer to use:\n",
+    "\n",
+    "# Docs: https://huggingface.co/xlm-roberta-base\n",
+    "# model_name = 'xlm-roberta-base'\n",
+    "# DOCS: https://huggingface.co/bert-base-cased\n",
+    "# model_name = 'bert-base-cased'\n",
+    "# DOCS: https://huggingface.co/bert-base-uncased \n",
+    "model_name = 'bert-base-uncased'\n",
     "\n",
     "my_tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    bert_model_name_uncased,\n",
+    "    model_name,\n",
     ")"
    ]
   },
@@ -472,7 +480,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Encode (Tokens → Integer IDs)"
+    "### Encode (Tokens → Integer IDs)\n",
+    "\n",
+    "We have `encode_text_from_tokenizer()` from our helper module that can encode\n",
+    "our text based on our tokenization process from our tokenizer `my_tokenizer`.\n",
+    "\n",
+    "This will also provide us with `token_mapping`, an object that we can use to\n",
+    "map our tokens back and forth from strings to integer IDs."
    ]
   },
   {
@@ -481,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoded, token_mapping = encode_text_from_tokenizer(\n",
+    "encoded_text, token_mapping = encode_text_from_tokenizer(\n",
     "    text=raw_text,\n",
     "    tokenizer=my_tokenizer,\n",
     ")"
@@ -501,7 +515,8 @@
    "outputs": [],
    "source": [
     "n_tokens = token_mapping.n_tokens\n",
-    "dataset_size = len(encoded)"
+    "dataset_size = len(encoded_text)\n",
+    "print(f'Size of dataset: {dataset_size:,} tokens')"
    ]
   },
   {
@@ -510,10 +525,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "length = 16  # Tokens \n",
-    "batch_size = 32\n",
+    "# Defining sequence length that will be taken in at a time by our model\n",
+    "sequence_length = 32 # Number of tokens\n",
+    "batch_size = 32 # Number \n",
     "\n",
-    "train_dataset = ShakespeareDataset(encoded, length)\n",
+    "train_dataset = ShakespeareDataset(encoded_text, sequence_length)\n",
     "train_loader = DataLoader(\n",
     "    train_dataset,\n",
     "    shuffle=False, # Ensure determinsitic training\n",
@@ -525,7 +541,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Model"
+    "## Define Model\n",
+    "\n",
+    "We'll provide a defined model today, but this could be a step that you would\n",
+    "modify and experiment in other NLP projects you'll do."
    ]
   },
   {
@@ -534,6 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Defining the model to be trained and generate text with\n",
     "model = build_model(n_tokens)\n",
     "model.to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
@@ -544,7 +564,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Text Genaration"
+    "## Define Text Generation\n",
+    "\n",
+    "The `generate_text_by_subword()` function will use your chosen tokenizer and the\n",
+    "NLP model to generate new text token-by-token (subwords in this case) by taking\n",
+    "in the input text and token sampling parameters.\n",
+    "\n",
+    "We can use temperature and top-k sampling to adjust the \"creativeness\" of the\n",
+    "generated text.\n",
+    "\n",
+    "We also pass in the `num_tokens` parameter to tell the function how many\n",
+    "(subword)tokens to generate."
    ]
   },
   {
@@ -562,22 +592,29 @@
     "    temperature: float = 1.0,\n",
     "    topk: int | None = None,\n",
     ") -> str:\n",
+    "    # Use your chosen subword-tokenizer\n",
     "    tokenized_text = tokenize_text_from_tokenizer(\n",
     "        tokenizer=tokenizer,\n",
     "        text=input_str,\n",
     "    )\n",
+    "    # Generates token-by-token and creates a list of those tokens\n",
     "    generated_tokens = []\n",
     "    for _ in range(num_tokens):\n",
+    "        # Uses the input text and generated text (so far) to get next token\n",
     "        new_token = next_token(\n",
     "            tokenized_text=(tokenized_text + generated_tokens),\n",
     "            model=model,\n",
     "            token_mapping=token_mapping,\n",
+    "            # Temperature & top-k sampling are used in determing the next token\n",
     "            temperature=temperature,\n",
     "            topk=topk,\n",
     "        )\n",
     "        generated_tokens.append(new_token)\n",
-    "    # Input string and generated string\n",
-    "    output_ids = tokenizer.convert_tokens_to_ids(tokenized_text + generated_tokens)\n",
+    "    # List of all token IDs (input text and generated text)\n",
+    "    output_ids = tokenizer.convert_tokens_to_ids(\n",
+    "        tokenized_text + generated_tokens\n",
+    "    )\n",
+    "    # Returns input string plus the full generated string from list of token IDs\n",
     "    full_text = tokenizer.decode(output_ids)\n",
     "    return full_text"
    ]
@@ -586,7 +623,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train Model"
+    "## Train Model\n",
+    "\n",
+    "At this point, the model has not been trained so the code below will train the\n",
+    "NLP model that will be used to generate new text.\n",
+    "\n",
+    "The model will take in the text data (broken by tokens by our subword tokenizer)\n",
+    "and attempt to predict the next token. Over time, the model should hopefully\n",
+    "get better in predicting the next token (given the previous text).\n",
+    "\n",
+    "To help us visualize how the model is training, at the end of every epoch, we\n",
+    "generate text using the `TEST_PHRASE` with the improving model."
    ]
   },
   {
@@ -595,6 +642,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "TEST_PHRASE = 'To be or not to be'\n",
     "epochs = 5\n",
     "\n",
     "start = start_time()\n",
@@ -611,10 +659,10 @@
     "        total_loss += loss.item()\n",
     "    \n",
     "    print(f'Epoch {epoch + 1}/{epochs}, Loss: {total_loss / len(train_loader)}')\n",
-    "    print('[%s (%d %d%%) %.4f]' % (time_since(start), epoch, epoch / epochs * 100, loss))\n",
+    "    print(f'[{time_since(start)} ({epoch} {epoch / epochs * 100}) {loss:.4f}]')\n",
     "    print('-'*72)\n",
     "    output = generate_text_by_subword(\n",
-    "        input_str='To be or not to be',\n",
+    "        input_str=TEST_PHRASE,\n",
     "        model=model,\n",
     "        token_mapping=token_mapping,\n",
     "        tokenizer=my_tokenizer,\n",
@@ -628,7 +676,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate Text"
+    "## Generate Text\n",
+    "\n",
+    "Now that the model has been trained, go ahead and observe how it performs!\n",
+    "\n",
+    "Try adjusting the different sampling methods using the `temperature` and `topk`\n",
+    "parameters on the same input string to see the differences.\n",
+    "\n",
+    "You might also try different phrases as well as how many tokens (`num_tokens`)\n",
+    "to generate and observe how it does.\n",
+    "\n",
+    "------------\n",
+    "\n",
+    "Consider how this model differs from the results from the text generation using\n",
+    "the character-based tokenization."
    ]
   },
   {
@@ -643,17 +704,10 @@
     "        token_mapping=token_mapping,\n",
     "        tokenizer=my_tokenizer,\n",
     "        num_tokens=30,\n",
-    "        temperature=1.0,\n",
-    "        topk=10,\n",
+    "        temperature=1.5,\n",
+    "        topk=100,\n",
     "    )\n",
     "print(output)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Comparison Between Generation"
    ]
   }
  ],
