Fix various typos; code unaffected

--- a/exercise-3-text-generation/starter/text-generation.ipynb
+++ b/exercise-3-text-generation/starter/text-generation.ipynb
@@ -21,7 +21,7 @@
     "    TokenMapping,\n",
     "    build_model,\n",
     "    next_token,\n",
-    "    # Characeter-based helpers\n",
+    "    # Character-based helpers\n",
     "    encode_text,\n",
     "    # Subword-based helpers\n",
     "    encode_text_from_tokenizer,\n",
@@ -78,10 +78,10 @@
     "Each token will be a single character from the text and the model will learn\n",
     "to predict the next character (a token).\n",
     "\n",
-    "To generate text the text, the model will take in a new string,\n",
+    "To generate text, the model will take in a new string,\n",
     "character-by-character, and then generate a new likely character based on the\n",
     "past input. Then the model will take into account that new character and\n",
-    "genearate the following character and so on and so on until the model has\n",
+    "generate the following character and so on and so on until the model has\n",
     "produced a set number of characters."
    ]
   },
@@ -319,7 +319,7 @@
     "            tokenized_text=(tokenized_text + generated_tokens),\n",
     "            model=model,\n",
     "            token_mapping=token_mapping,\n",
-    "            # Temperature & top-k sampling are used in determing the next token\n",
+    "            # Temperature & top-k sampling used in determining the next token\n",
     "            temperature=temperature,\n",
     "            topk=topk,\n",
     "        )\n",
@@ -421,7 +421,7 @@
     "token-by-token.\n",
     "\n",
     "Although this could be done by creating your own tokenizer, you'll use\n",
-    "Hugging Face to use a pretrained tokenizer to tokenizer the data.\n",
+    "Hugging Face to use a pretrained tokenizer to tokenize the data.\n",
     "\n",
     "After training the model with subword tokens, \n",
     "the model will take in a new string, token-by-token, and then generate a new\n",
@@ -529,7 +529,7 @@
     "train_dataset = ShakespeareDataset(encoded_text, sequence_length)\n",
     "train_loader = DataLoader(\n",
     "    train_dataset,\n",
-    "    shuffle=False, # Ensure determinsitic training\n",
+    "    shuffle=False, # Ensure deterministic training\n",
     "    batch_size=batch_size,\n",
     ")"
    ]
@@ -602,7 +602,7 @@
     "            tokenized_text=(tokenized_text + generated_tokens),\n",
     "            model=model,\n",
     "            token_mapping=token_mapping,\n",
-    "            # Temperature & top-k sampling are used in determing the next token\n",
+    "            # Temperature & top-k sampling used in determining the next token\n",
     "            temperature=temperature,\n",
     "            topk=topk,\n",
     "        )\n",
