Correct some typos; doesn't affect code

--- a/exercise-2-encoding-text/solution/encoding.ipynb
+++ b/exercise-2-encoding-text/solution/encoding.ipynb
@@ -248,8 +248,6 @@
     "    tokens_from_text = postprocess_tokens(tokens_from_text)\n",
     "    unique_tokens.update(tokens_from_text)\n",
     "\n",
-    "# Allow for \n",
-    "\n",
     "# Create mapping (dictionary) for unique tokens using arbitrary & unique IDs\n",
     "token2id = defaultdict(lambda : 0) # Allow for unknown tokens to map to 0\n",
     "token2id |= {\n",
@@ -330,7 +328,7 @@
     "## Decoding Token IDs to Text\n",
     "\n",
     "Based on your enocder you created (`encode()`), create a decoder (`decode()`) to\n",
-    "take a list token IDs and map them to their associated token."
+    "take a list of token IDs and map them to their associated token."
    ]
   },
   {
