--- a/exercise-2-encoding-text/starter/encoding.ipynb
+++ b/exercise-2-encoding-text/starter/encoding.ipynb
@@ -237,7 +237,7 @@
     "## Decoding Token IDs to Text\n",
     "\n",
     "Based on your enocder you created (`encode()`), create a decoder (`decode()`) to\n",
-    "take a list token IDs and map them to their associated token."
+    "take a list of token IDs and map them to their associated token."
    ]
   },
   {
